# film-recommender-app

./: .gitignore  README.md  config.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  tests.py  train_collaborative.py  train_content_similarity.py  update_poster_paths.py  utils.py
film_features/: film_features.csv
src/: config.py  tests.py  utils.py
src/app/: app.py  ui.py  ui_utils.py
src/preprocessing/: preprocessing.py  update_poster_paths.py  utils.py
src/training/: train_collaborative.py  train_content_similarity.py
